--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,16 +9,16 @@ body {
 
 .header {
     /* Хедер */
-    position: absolute;
+    margin: 0px 0px;
     width: 1600px;
     height: 80px;
     left: 0px;
     top: 0px;
 }
 
-.name {
+.name-header {
     /* WebStudio */
-    position: absolute;
+    padding: 24px 1240px 25px 215px;
     width: 145px;
     height: 31px;
     left: 215px;
@@ -38,7 +38,7 @@ body {
 
 .menu-list {
     /* Menu Nav */
-    position: absolute;
+    padding: 32px 866px 32px 453px;
     width: 281px;
     height: 16px;
     left: 453px;
