Вирівнює в один ряд навігацію, створює кнопки

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,48 +1,68 @@
 body {
     /* Головна */
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
     position: relative;
     width: 1600px;
     height: 2346px;
-
     background: #FFFFFF;
 }
 
 .header {
     /* Хедер */
-    margin: 0px 0px;
+    position: absolute;
     width: 1600px;
     height: 80px;
     left: 0px;
     top: 0px;
+    
+    background: #FFFFFF;
 }
 
 .name-header {
     /* WebStudio */
-    padding: 24px 1240px 25px 215px;
+    position: absolute;
     width: 145px;
     height: 31px;
     left: 215px;
     top: 24px;
-
+    
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 31px;
-   /* identical to box height */
-
+    /* identical to box height */
+    
     letter-spacing: 0.03em;
+    
+    color: #000000;
+}
 
+.name-title {
+    color: #2196F3;
+}
+
+.menu-list>.menu-item {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.menu-list:hover,
+.mail-link:hover,
+.tel-link:hover {
     color: #2196F3;
 }
 
 .menu-list {
     /* Menu Nav */
-    padding: 32px 866px 32px 453px;
+    position: absolute;
     width: 281px;
     height: 16px;
     left: 453px;
     top: 32px;
+    
+    color: #212121;
 }
 
 .mail-link {
@@ -52,6 +72,13 @@ body {
     height: 16px;
     left: 1078px;
     top: 32px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
 }
 
 .tel-link {
@@ -61,6 +88,15 @@ body {
     height: 16px;
     left: 1263px;
     top: 32px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+
+    color: #757575;
 }
 
 .title {
@@ -96,13 +132,18 @@ body {
     color: #FFFFFF;
 }
 
-button {
+.title button[type="button"] {
     /* Button */
-    padding: 350px 692px 200px;
+    position: absolute;
     width: 216px;
     height: 50px;
     left: 692px;
     top: 430px;
+    
+    color: #FFFFFF;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
 
 .describe {
@@ -140,3 +181,31 @@ button {
     left: 0px;
     top: 2094px;
 }
+
+/*Portfolio*/
+.portfolio-list {
+    position: absolute;
+    width: 575px;
+    height: 54px;
+    left: 512px;
+    top: 174px;
+
+    color: #212121;
+}
+
+.portfolio-item {
+    background: #F5F4FA;
+    border-radius: 4px;
+}
+
+.portfolio-item:hover {
+    background-color: #2196F3;
+}
+
+.portfolio-list>.portfolio-item {
+    display: inline-block;
+    vertical-align: top;
+}
+
+
+
