--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,7 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.19;
     /* identical to box height */
     letter-spacing: 0.03em;
 
@@ -102,7 +102,7 @@ body {
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
 
     color: var(--secondary-text-color);
@@ -118,7 +118,7 @@ body {
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
 
     color: var(--secondary-text-color);
@@ -161,7 +161,7 @@ body {
     font-family: 'Roboto';
     font-weight: 900;
     font-size: 44px;
-    line-height: 60px;
+    line-height: 1.36;
     /* or 136% */
 
     text-align: center;
@@ -221,7 +221,7 @@ body {
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
@@ -232,7 +232,7 @@ body {
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.5;
     /* or 171% */
 
     letter-spacing: 0.03em;
@@ -253,7 +253,7 @@ body {
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 32px;
-    line-height: 42px;
+    line-height: 1.3;
     text-align: center;
     letter-spacing: 0.03em;
     
@@ -295,7 +295,7 @@ body {
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 32px;
-    line-height: 42px;
+    line-height: 1.3;
     text-align: center;
     letter-spacing: 0.03em;
 
@@ -361,7 +361,7 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.19;
  /* identical to box height */
 
     letter-spacing: 0.03em;
@@ -394,7 +394,7 @@ body {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71;
     /* or 171% */
     
     letter-spacing: 0.03em;
@@ -409,7 +409,7 @@ body {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71;
     /* or 171% */
 
     letter-spacing: 0.03em;
@@ -450,7 +450,7 @@ body {
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 16px;
-    line-height: 26px;
+    line-height: 1.62;
     /* identical to box height, or 162% */
     
     text-align: center;
