--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,11 +71,12 @@ body {
 .menu-list,
 .menu-contacts {
     list-style: none;
+    margin: 0px;
 }
 
 .menu-list {
     padding-left: 0px;
-    margin: 0px;
+
    
     display: flex;
     justify-content: flex-start; 
@@ -143,17 +144,14 @@ body {
 
  /*___________________Герой____________________*/
 .hero {
-    position: absolute;
     width: 1600px;
     height: 600px;
-    left: 0px;
-    top: 80px;
 
     background-color: var(--background-color);
 }
 
 .hero-title {
-   
+    margin: 0;
     padding: 200px 452px 280px;
     width: 696px;
     height: 120px;
@@ -172,7 +170,7 @@ body {
     color: var(--title-color);
 }
 
-.hero button[type="button"] {
+.hero-button {
     /* Button */
     position: absolute;
     width: 216px;
@@ -194,18 +192,22 @@ body {
     background-color: var(--background-color-main);
 }
 
-/* ___________________ÐžÑÐ¾Ð±Ð»Ð¸Ð²Ð¾ÑÑ‚Ñ–_________________________ */
+/* ___________________Особливості_________________________ */
 
 .describe {
-    margin: 774px 215px 1474px;
+    width: 1170px;
+    height: 98px;
+    margin-left: 215px;
+    margin-top: 94px;
 }
 
 .describe-title {
     content-visibility: hidden;
+    margin: 0;
 }
 
 .describe-list {
-
+    margin: 0;
     padding-left: 0;
     display: flex;
     
@@ -216,9 +218,14 @@ body {
 
 }
 
-.describe-item > h3 {
-    flex-flow: wrap row;
-    justify-content: flex-start;
+.describe-item {
+    width: 270px;
+    margin-right: 30px;
+}
+
+.describe-article {
+    margin-top: 0;
+    margin-bottom: 10px;
 
     width: 270px;
     height: 16px;
@@ -232,14 +239,12 @@ body {
     color: var(--primary-text-color);
 }
 
-.describe-item > .describe-text {
-    flex-flow: wrap row;
-    justify-content: flex-start;
+.describe-text {
+    margin: 0;
 
     width: 270px;
     height: 72px;
 
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.5;
     /* or 171% */
@@ -251,15 +256,24 @@ body {
 
 /*__________________Наш бізнес______________*/
 
+.our-business {
+    margin-top: 118px;
+
+    width: 1170px;
+    height: 386px;
+}
+
 .our-business-title {
     margin: 0px;
-    position: absolute;
+    margin-left: 617px;
+    margin-bottom: 50px;
+
     width: 366px;
     height: 42px;
-    left: 402px;
-    top: 0px;
+
+    display: flex;
+    justify-content: center;
     
-    font-weight: 700;
     font-size: 32px;
     line-height: 1.3;
     text-align: center;
@@ -268,21 +282,12 @@ body {
     color: var(--primary-text-color);
 }
 
-.our-business {
-    position: absolute;
-    width: 1170px;
-    height: 386px;
-    left: 215px;
-    top: 966px;
-
-    display: flex;
-    align-items: flex-end;
-}
-
 .our-business-list {
+    margin: 0 0 0 215px;    
+    padding-left: 0;
+
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
 
     list-style: none;
 }
@@ -293,14 +298,26 @@ body {
 }
 
 /* __________________Наша команда_________________ */
+.our-command {
+    margin-top: 94px;
+
+    width: 1600px;
+    height: 648px;
+
+    background-color: var(--background-portfolio);
+}
+
 .our-command-title {
-    position: absolute;
+    padding-top: 94px;
+    padding-left: 668px;
+    margin: 0;
+
     width: 264px;
     height: 42px;
-    left: 668px;
-    top: 94px;
 
-    font-weight: 700;
+    display: flex;
+    justify-content: center;
+
     font-size: 32px;
     line-height: 1.3;
     text-align: center;
@@ -309,84 +326,104 @@ body {
     color: var(--primary-text-color);
 }
 
-.our-command {
-    position: absolute;
-    width: 1600px;
-    height: 648px;
-    left: 0px;
-    top: 1446px;
-
-    background: #F5F4FA;
-
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-}
-
 .our-command-list {
+    margin: 50px 215px 94px;
+    padding-left: 0px;
+
     display: flex;
     flex-direction: row;
-    padding-left: 0px;
+  
     list-style: none;
-
-    width: 1170px;
-    height: 368px;
-    left: 215px;
-    top: 1632px;
 }
 
 .our-command-item {
     padding-right: 30px;
 
+    width: 270px;
+    height: 368px;
 }
 
-.our-command-item > h3,
-.our-command-item > p {
+.our-name {
+    margin-top: 30px;
+    margin-bottom: 0;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+/* identical to box height */
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
     display: flex;
     justify-content: center;
 }
 
-/*___________________ÐŸÑ–Ð´Ð²Ð°Ð»__________________________*/
+.our-job{
+    margin-top: 10px;
+    margin-bottom: 0;
+    /* font-weight: 400; */
+    font-size: 16px;
+    line-height: 1.18;
+/* identical to box height */
+    text-align: center;
+    letter-spacing: 0.03em;
+    color:var(--secondary-text-color);
+
+    display: flex;
+    justify-content: center;
+}
+
+.pic-worker{
+    width: 270px;
+    height: 368px;
+
+    background: #FFFFFF;
+/* material shadow v1 */
+
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+}
+
+/*__________________Підвал__________________________*/
 .footer {
-    position: absolute;
     width: 1600px;
     height: 252px;
-    left: 0px;
-    top: 2094px;
 
-    background: var(--background-color);
+    background-color: var(--background-color);
+}
+
+.footer-block {
+    padding-top: 60px;
 }
 
 .name-footer {
-    position: absolute;
+    margin-left: 215px;
+    margin-top: 60px;
+
     width: 145px;
     height: 31px;
-    left: 215px;
-    top: 60px;
 
     font-family: 'Raleway';
-    font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
  /* identical to box height */
-
     letter-spacing: 0.03em;
-
     text-decoration: none;
-
     color: #FFFFFF;
 }
 
 .adress-list {
-    list-style: none;
+    margin-left: 215px;
+
     padding-left: 0px;
 
-    position: absolute;
+    list-style: none;
+    font-style: normal;
+
     width: 231px;
     height: 81px;
-    left: 215px;
-    top: 111px;
+
 
     text-decoration:none;
 }
@@ -397,6 +434,8 @@ body {
 }
 
 .adress-list a[href="https://goo.gl/maps/f6Jy9NrF3AqPm8kXA"] {
+    width: 231px;
+    height: 21px;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
@@ -410,6 +449,8 @@ body {
 
 .adress-list a[href="mailto:info@devstudio.com"],
 .adress-list a[href="tel:+380961111111"] {
+    width: 231px;
+    height: 21px;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
@@ -429,16 +470,17 @@ body {
 /*========================Portfolio==========================*/
 
 .portfolio {
-    position: absolute;
+    margin: 94px 0 0 215px;
+
     width: 1170px;
     height: 1360px;
-    left: 215px;
-    top: 174px;
+
 }
 
 .portfolio-list {
-    margin-left: 297px;
-    padding: 0px;
+    margin: 94px 0 0 297px;
+    padding-left: 0;
+
     width: 575px;
     height: 54px;
     list-style: none;
@@ -463,27 +505,29 @@ body {
 }
 
 .portfolio-list button[type="button"]:hover {
-    background: #2196F3;
-    color: #fff;
+    background-color: var(--accent-text-color);
+    color: var(--title-color);
 }
 
 .portfolio-list button[type="button"] {
     padding: 6px 22px;
     width: auto;
     height: 38px;
-    left: auto;
-    top: 174px;
 
-    background: #F5F4FA;
+    background-color: var(--background-portfolio);
     border-radius: 4px;
+
+    border: 0;
 
     cursor: pointer;
 }
 
 .photo-list {
+    margin: 0;
+    padding-left: 0;
     list-style: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-flow: row wrap;
     align-items: flex-end;
 }
@@ -493,5 +537,38 @@ body {
     border: 1px solid #EEEEEE;
 }
 
+.photo-title {
+    margin-left: 24px;
+    margin-top: 20px;
 
+    width: 322px;
+    height: 36px;
 
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+/* identical to box height, or 200% */
+
+    letter-spacing: 0.06em;
+
+    color: var(--primary-text-color);
+
+}
+
+.photo-text {
+    margin-left: 24px;
+    margin-top: 4px;
+
+    width: 322px;
+    height: 30px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.8;
+/* identical to box height, or 188% */
+
+    letter-spacing: 0.03em;
+
+    color: var(--secondary-text-color);
+
+}
