--- a/styles/styles.css
+++ b/styles/styles.css
@@ -504,6 +504,7 @@ body {
     padding-left: 0;
     list-style: none;
     display: flex;
+    justify-content: center;
 }
 
 .portfolio-list button[type="button"]:hover,
